name:                tarbell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tarbell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Orbitals
  hs-source-dirs:      src
  main-is:             Orbitals.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  array
                    ,  haskell-gi-base
                    ,  gi-gtk
                    ,  mtl
                    ,  MonadRandom
                    ,  cairo
                    ,  gi-cairo
                    ,  gi-glib
                    ,  time
                    ,  colour

executable BubbleChamber
  hs-source-dirs:      src
  main-is:             BubbleChamber.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  array
                    ,  haskell-gi-base
                    ,  gi-gtk
                    ,  mtl
                    ,  MonadRandom
                    ,  cairo
                    ,  gi-cairo
                    ,  gi-glib
                    ,  time
                    ,  colour

executable BinaryRing
  hs-source-dirs:      src
  main-is:             BinaryRing.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  haskell-gi-base
                    ,  gi-gtk
                    ,  mtl
                    ,  MonadRandom
                    ,  cairo
                    ,  gi-cairo
                    ,  gi-glib
                    ,  time
                    ,  colour

executable Substrate
  hs-source-dirs:      src
  main-is:             Substrate.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  array
                    ,  haskell-gi-base
                    ,  gi-gtk
                    ,  mtl
                    ,  MonadRandom
                    ,  cairo
                    ,  gi-cairo
                    ,  gi-glib
                    ,  time
                    ,  colour
